# opengl_engine

./: CMakeLists.txt  engine.cpp  engine.h  image.h  main.cpp  opengl.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
glad/: glad.cpp  glad.h
glfw/lib/: glfw3.lib
shaders/: fragment.glsl
utils/: utils.cpp  utils.h
